--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -85,7 +85,7 @@ jobs:
         echo "$SSH_PRIVATE_KEY" > private_key.pem
         chmod 600 private_key.pem
 
-        ssh -i private_key.pem -o StrictHostKeyChecking=no ubuntu@ec2-18-193-110-111.eu-central-1.compute.amazonaws.com "docker run $DOCKERHUB_USERNAME/clockbox:latest && exit"
+        ssh -i private_key.pem -o StrictHostKeyChecking=no $USER@$HOST "docker run $DOCKERHUB_USERNAME/clockbox:latest && exit"
         #   echo "Connected to VM"
         #   # sudo docker login -u="${DOCKERHUB_USERNAME}" -p="${DOCKERHUB_PASSWORD}"
         #   sudo docker pull $DOCKERHUB_USERNAME/clockbox:latest
