--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -19,6 +19,11 @@ jobs:
         java-version: '17'
         distribution: 'temurin'
         cache: maven
+    - name: 'Checkout Repository'
+      uses: actions/checkout@v4
+    - name: 'Dependency Review'
+      uses: actions/dependency-review-action@v4
+
 
     # - name: Get Current Version
     #   id: get_version
@@ -74,18 +79,18 @@ jobs:
     #     push: true
     #     tags: ${{ secrets.DOCKERHUB_USERNAME }}/clockbox:latest
       
-    - name: SSH to VM and Run Docker Commands
-      env:
-        SSH_PRIVATE_KEY: ${{ secrets.SSH_KEY }}
-        HOST: ${{ secrets.SSH_HOST }}
-        USER: ${{ secrets.SSH_NAME }}
-        DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
-        DOCKERHUB_PASSWORD: ${{ secrets.DOCKERHUB_PASSWORD }}
-      run: |
-        echo "$SSH_PRIVATE_KEY" > private_key.pem
-        chmod 600 private_key.pem
+    # - name: SSH to VM and Run Docker Commands
+    #   env:
+    #     SSH_PRIVATE_KEY: ${{ secrets.SSH_KEY }}
+    #     HOST: ${{ secrets.SSH_HOST }}
+    #     USER: ${{ secrets.SSH_NAME }}
+    #     DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
+    #     DOCKERHUB_PASSWORD: ${{ secrets.DOCKERHUB_PASSWORD }}
+    #   run: |
+    #     echo "$SSH_PRIVATE_KEY" > private_key.pem
+    #     chmod 600 private_key.pem
 
-        ssh -i private_key.pem -o StrictHostKeyChecking=no $USER@$HOST "docker run $DOCKERHUB_USERNAME/clockbox:latest && exit"
+        # ssh -i private_key.pem -o StrictHostKeyChecking=no $USER@$HOST "docker run $DOCKERHUB_USERNAME/clockbox:latest && exit"
         #   echo "Connected to VM"
         #   # sudo docker login -u="${DOCKERHUB_USERNAME}" -p="${DOCKERHUB_PASSWORD}"
         #   sudo docker pull $DOCKERHUB_USERNAME/clockbox:latest
