--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -21,9 +21,13 @@ jobs:
         cache: maven
     - name: 'Checkout Repository'
       uses: actions/checkout@v4
-    - name: 'Dependency Review'
-      uses: actions/dependency-review-action@v4
-
+    - name: Dependency Review
+      uses: actions/dependency-review-action@v2
+      with:
+        fail-on-severity: critical
+        allow-licenses: MIT, Apache-2.0, ISC, BSD-2-Clause, 0BSD, NOASSERTION
+        base-ref: ${{ github.event.pull_request.base.sha || 'main' }}
+        head-ref: ${{ github.event.pull_request.head.sha || github.ref }}
 
     # - name: Get Current Version
     #   id: get_version
