--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -29,7 +29,34 @@ jobs:
         allow-licenses: MIT, Apache-2.0, ISC, BSD-2-Clause, 0BSD, NOASSERTION
         base-ref: ${{ github.event.pull_request.base.sha || 'master' }}
         head-ref: ${{ github.event.pull_request.head.sha || github.ref }}
+    - name: Build with Maven
+      run: mvn -B package --file pom.xml
 
+    - name: Login to Docker Hub
+      uses: docker/login-action@v3
+      with:
+        username: ${{ secrets.DOCKERHUB_USERNAME }}
+        password: ${{ secrets.DOCKERHUB_PASSWORD }}
+
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v3
+
+    - name: Build and push
+      uses: docker/build-push-action@v6
+      with:
+        push: true
+        tags: ${{ secrets.DOCKERHUB_USERNAME }}/clockbox:latest
+  scan_docker_image:
+          permissions:
+
+            id-token: read
+            contents: read
+            packages: read
+          runs-on: ubuntu-latest
+          needs: hamster01/clockbox:latest
+          steps:
+            - name: Checkout 🛎️
+              uses: actions/checkout@v2
     # - name: Get Current Version
     #   id: get_version
     #   run: |
