--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -53,7 +53,7 @@ jobs:
             # contents: read
             # packages: read
           runs-on: ubuntu-latest
-          needs: [ build_name ]
+          needs: ${{ secrets.DOCKERHUB_USERNAME }}/clockbox:latest
           steps:
             - name: Checkout 🛎️
               uses: actions/checkout@v2
