--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -46,17 +46,15 @@ jobs:
       with:
         push: true
         tags: ${{ secrets.DOCKERHUB_USERNAME }}/clockbox:latest
-  scan_docker_image:
-          # permissions:
+    - name: Scan Docker image 🐳
+      uses: snyk/actions/docker@master
+      continue-on-error: true
 
-            # id-token: read
-            # contents: read
-            # packages: read
-          runs-on: ubuntu-latest
-          needs: ${{ secrets.DOCKERHUB_USERNAME }}/clockbox:latest
-          steps:
-            - name: Checkout 🛎️
-              uses: actions/checkout@v2
+      with:
+        image: ${{ secrets.DOCKERHUB_USERNAME }}/${{ clockbox }}:${{ latest }}
+        args: --file=Dockerfile --severity-threshold=high --sarif-file-output=snyk.sarif
+      env:
+        SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
     # - name: Get Current Version
     #   id: get_version
     #   run: |
