--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -45,6 +45,13 @@ jobs:
         args: --file=Dockerfile --severity-threshold=high --sarif-file-output=snyk.sarif
       env:
         SNYK_TOKEN: ${{ secrets.SYNK_TOKEN }}
+    - name: Static Code Analysis
+      uses: actions/setup-java@v4
+      with:
+        java-version: '17'
+        distribution: 'temurin'
+      if: ${{ github.event.pull_request.merged }}
+
     # - name: Get Current Version
     #   id: get_version
     #   run: |
